<resources>
    <string name="app_name">归物+</string>
    <string name="tip_title">今日整理灵感</string>
    <string name="action_refresh_tip">刷新灵感</string>
    <string name="entry_items">物品总览</string>
    <string name="entry_borrow">借用管理</string>
    <string name="entry_statistics">数据洞察</string>
    <string name="entry_settings">偏好设置</string>
    <string name="recent_title">最近入库</string>
    <string name="state_empty">暂无数据，快去添加吧</string>
    <string name="action_add_item">新增物品</string>
    <string name="desc_item_photo">物品照片</string>
    <string name="notification_title">借用提醒</string>
    <string name="notification_channel_name">借用提醒</string>
    <string name="notification_due_borrow">有 %1$d 条借用记录即将到期</string>
    <string name="title_item_list">物品总览</string>
    <string name="title_item_edit">编辑物品</string>
    <string name="title_item_add">新增物品</string>
    <string name="title_item_detail">物品详情</string>
    <string name="title_borrow_manage">借用管理</string>
    <string name="title_statistics">数据洞察</string>
    <string name="title_settings">偏好设置</string>
    <string name="label_name">名称</string>
    <string name="label_category">分类</string>
    <string name="label_location">位置</string>
    <string name="label_storage_detail">存放细节</string>
    <string name="label_tags">标签</string>
    <string name="label_value">估值(元)</string>
    <string name="label_quantity">数量</string>
    <string name="label_purchase_date">购入日期</string>
    <string name="label_warranty">保修/过期</string>
    <string name="label_note">备注</string>
    <string name="label_photo">照片</string>
    <string name="label_borrower">借用人</string>
    <string name="label_contact">联系方式</string>
    <string name="label_expected_return">预期归还</string>
    <string name="label_status">状态</string>
    <string name="action_save">保存</string>
    <string name="action_delete">删除</string>
    <string name="action_share_qr">分享二维码</string>
    <string name="action_mark_return">标记归还</string>
    <string name="action_add_borrow">新增借用记录</string>
    <string name="dialog_delete_item">确定删除该物品吗？</string>
    <string name="dialog_delete_borrow">确定删除该借用记录吗？</string>
    <string name="msg_saved">保存成功</string>
    <string name="msg_deleted">删除成功</string>
    <string name="msg_return_marked">已标记归还</string>
    <string name="msg_tip_loading">加载中…</string>
    <string name="msg_tip_error">加载失败，点击重试</string>
    <string name="msg_qr_empty">暂无二维码内容</string>
    <string name="msg_permission_media_denied">需要相册权限才能选择图片</string>
    <string name="msg_no_default_icon">请先在 assets/default_icons 中放入图片文件</string>
    <string name="dialog_default_icon_title">选择默认图标</string>
    <string name="filter_title">快速筛选</string>
    <string name="filter_reset">重置</string>
    <string name="filter_apply">应用</string>
    <string name="stats_total_asset">资产总值</string>
    <string name="stats_favorite">重点关注</string>
    <string name="stats_chart_title">分类分布</string>
    <string name="settings_dark_mode">暗色主题</string>
    <string name="settings_borrow_reminder">借用提醒</string>
    <string name="settings_about">关于项目</string>
    <string name="settings_about_desc">参考“归物”理念打造的个人物品管理工具</string>
    <string name="settings_logout">退出登录</string>
    <string name="share_subject">来自归物+的物品二维码</string>
    <string name="share_text">请扫码快速登记此物品信息</string>
    <string name="auth_login">登录</string>
    <string name="auth_register">注册</string>
    <string name="auth_switch_to_login">已有账号？点此登录</string>
    <string name="auth_switch_to_register">没有账号？点此注册</string>
    <string name="auth_username_hint">账号</string>
    <string name="auth_password_hint">密码</string>
    <string name="auth_confirm_hint">确认密码</string>
    <string name="action_pick_photo">上传图片</string>
    <string name="action_default_photo">使用默认图标</string>
</resources>